# oreilly-terminal-reader

./: .gitignore  Cargo.toml  cookie_grabber.js
src/: auth.rs  client.rs  main.rs  parser.rs  reader.rs
